--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+        <paradigma.libs.version>3.0.1.0</paradigma.libs.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +60,7 @@
             <artifactId>lombok</artifactId>
             <version>1.16.18</version>
         </dependency>
+
 	</dependencies>
 
 
