--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>spring-integration-webflux</artifactId>
             <version>5.0.5.RELEASE</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-redis</artifactId>
+            <version>5.0.5.RELEASE</version>
+        </dependency>-->
 
         <dependency>
 			<groupId>org.springframework.boot</groupId>
