--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,14 @@
             <artifactId>spring-integration-webflux</artifactId>
             <version>5.0.5.RELEASE</version>
         </dependency>
-        <!--<dependency>
-            <groupId>org.springframework.integration</groupId>
-            <artifactId>spring-integration-redis</artifactId>
-            <version>5.0.5.RELEASE</version>
-        </dependency>-->
+
+        <!--Hazelcast-->
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-client</artifactId>
+            <version>3.10.2</version>
+        </dependency>
+
 
         <dependency>
 			<groupId>org.springframework.boot</groupId>
